--- a/frontend/src/constants/style.css
+++ b/frontend/src/constants/style.css
@@ -15,7 +15,7 @@
 
 /* UserDrawer Styles */
 .drawer {
-  width: 13rem;
+  width: 17rem;
   height: 100vh;
   background-color: #f3f4f6; /* Light gray background */
   position: fixed;
@@ -30,4 +30,52 @@
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
   font-style: normal;
+}
+
+/* Loader Wrapper - Full-Screen Overlay */
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  backdrop-filter: blur(5px); /* Blur effect */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Spinning Loader */
+.loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border-top: 4px solid #fff;
+  border-right: 4px solid transparent;
+  animation: rotation 1s linear infinite;
+  position: relative;
+}
+
+.loader::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border-left: 4px solid #266fef;
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
