view panelist ui setted and pollcount creeated

--- a/frontend/src/constants/style.css
+++ b/frontend/src/constants/style.css
@@ -79,3 +79,25 @@
     transform: rotate(360deg);
   }
 }
+
+.profile-pic {
+  width: 8rem; /* 128px */
+  height: 8rem; /* 128px */
+  border-radius: 50%; /* Makes it a perfect circle */
+  object-fit: cover; /* Ensures the image fills the container without distortion */
+}
+
+.label {
+  font-family: "Nunito", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  color: rgb(61, 56, 56);
+  font-weight: 400;
+}
+.value {
+  font-family: "Nunito", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+}
